api-resources/default/282c9441-30e6-40f6-b1df-98d26ae80229/1/default_282c9441-30e6-40f6-b1df-98d26ae80229_v1_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: petstore
spec:
  hostnames:
  - petstore.io
  parentRefs:
  - name: external
    namespace: gateway-system
  rules:
  - backendRefs:
    - name: petstore
      namespace: petstore
      port: 80
    matches:
    - method: GET
      path:
        type: Exact
        value: /cat
  - backendRefs:
    - name: petstore
      namespace: petstore
      port: 80
    matches:
    - method: POST
      path:
        type: Exact
        value: /cat
  - backendRefs:
    - name: petstore
      namespace: petstore
      port: 80
    matches:
    - method: GET
      path:
        type: Exact
        value: /dog
  - backendRefs:
    - name: petstore
      namespace: petstore
      port: 80
    matches:
    - method: POST
      path:
        type: Exact
        value: /dog
